--- a/welcome.html
+++ b/welcome.html
@@ -1,153 +1,114 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Dashboard | MERN GROUP</title>
+    <title>Welcome - CRUD</title>
 
-<!-- Bootstrap -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
-<!-- Google Font -->
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
-
-<style>
-body {
-    font-family: 'Poppins', sans-serif;
-    background: #f4f8fb;
-    margin: 0;
-}
-
-/* Navbar */
-.navbar {
-    background: #163a47;
-}
-
-.navbar-brand {
-    font-weight: 700;
-    color: white !important;
-}
-
-.nav-link {
-    color: #cce7ef !important;
-}
-
-.nav-link:hover {
-    color: white !important;
-}
-
-/* Hero Section */
-.hero {
-    background: linear-gradient(135deg, #1f4e5f, #163a47);
-    color: white;
-    padding: 60px 20px;
-    text-align: center;
-}
-
-.hero h1 {
-    font-weight: 700;
-}
-
-.hero p {
-    color: #d4ecf5;
-}
-
-/* Course Cards */
-.course-section {
-    padding: 60px 20px;
-}
-
-.card {
-    border: none;
-    border-radius: 20px;
-    box-shadow: 0 10px 25px rgba(0,0,0,0.08);
-    transition: 0.3s;
-}
-
-.card:hover {
-    transform: translateY(-8px);
-}
-
-.btn-custom {
-    background: #38b6ff;
-    border: none;
-    border-radius: 30px;
-}
-
-.btn-custom:hover {
-    background: #1ea0e6;
-}
-</style>
 </head>
+<body class="bg-dark text-white">
 
-<body>
+<div class="container mt-5">
 
-<!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar-dark px-4">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="#">MERAS GROUP</a>
-    </div>
-</nav>
+    <h2 class="text-center mb-4">User Management(CRUD)</h2>
 
-<!-- Hero -->
-<section class="hero">
-    <div class="container">
-        <h1>Internship Dashboard</h1>
-        <p>Explore our professional internship programs designed to boost your career.</p>
-    </div>
-</section>
-
-<!-- Courses -->
-<section class="course-section">
-    <div class="container">
-        <h2 class="text-center mb-5 fw-bold">Internship Programs</h2>
-
-        <div class="row g-4">
-
-            <!-- Java Full Stack -->
-            <div class="col-md-6 col-lg-4">
-                <div class="card p-4">
-                    <h4 class="fw-bold">Java Full Stack Developer</h4>
-                    <p class="text-muted">
-                        Learn Core Java, Spring Boot, Hibernate, MySQL, 
-                        and Frontend technologies like HTML, CSS, JavaScript, React.
-                    </p>
-                    <ul>
-                        <li>Duration: 3 Months</li>
-                        <li>Live Projects</li>
-                        <li>Certification</li>
-                        <li>Placement Assistance</li>
-                    </ul>
-                    <a href="#" class="btn btn-custom text-white mt-3">Enroll Now</a>
-                </div>
+    <!-- Add User Form -->
+    <div class="card p-4 text-dark">
+        <div class="row">
+            <div class="col-md-4">
+                <input type="text" id="name" class="form-control" placeholder="Enter Name">
             </div>
 
-            <!-- Python Developer -->
-            <div class="col-md-6 col-lg-4">
-                <div class="card p-4">
-                    <h4 class="fw-bold">Python Developer</h4>
-                    <p class="text-muted">
-                        Master Python, Django/Flask, REST APIs, 
-                        Database Integration, and basic Machine Learning.
-                    </p>
-                    <ul>
-                        <li>Duration: 3 Months</li>
-                        <li>Hands-on Projects</li>
-                        <li>Certification</li>
-                        <li>Placement Support</li>
-                    </ul>
-                    <a href="#" class="btn btn-custom text-white mt-3">Enroll Now</a>
-                </div>
+            <div class="col-md-4">
+                <input type="email" id="email" class="form-control" placeholder="Enter Email">
             </div>
 
+            <div class="col-md-4">
+                <button class="btn btn-primary w-100" onclick="addUser()">Add User</button>
+            </div>
         </div>
     </div>
-</section>
 
-<!-- Footer -->
-<footer class="text-center p-3 bg-dark text-white">
-    © 2026 MERAS GROUP | All Rights Reserved
-</footer>
+    <!-- User Table -->
+    <div class="card mt-4 p-3 text-dark">
+        <table class="table table-bordered">
+            <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>Name</th>
+                    <th>Email</th>
+                    <th>Actions</th>
+                </tr>
+            </thead>
+            <tbody id="userTable"></tbody>
+        </table>
+    </div>
+
+</div>
+
+<script>
+
+let users = JSON.parse(localStorage.getItem("users")) || [];
+let editIndex = -1;
+
+function displayUsers() {
+    let table = document.getElementById("userTable");
+    table.innerHTML = "";
+
+    users.forEach((user, index) => {
+        table.innerHTML += `
+            <tr>
+                <td>${index + 1}</td>
+                <td>${user.name}</td>
+                <td>${user.email}</td>
+                <td>
+                    <button class="btn btn-warning btn-sm" onclick="editUser(${index})">Edit</button>
+                    <button class="btn btn-danger btn-sm" onclick="deleteUser(${index})">Delete</button>
+                </td>
+            </tr>
+        `;
+    });
+
+    localStorage.setItem("users", JSON.stringify(users));
+}
+
+function addUser() {
+    let name = document.getElementById("name").value;
+    let email = document.getElementById("email").value;
+
+    if (name === "" || email === "") {
+        alert("Please fill all fields");
+        return;
+    }
+
+    if (editIndex === -1) {
+        users.push({ name, email });
+    } else {
+        users[editIndex] = { name, email };
+        editIndex = -1;
+    }
+
+    document.getElementById("name").value = "";
+    document.getElementById("email").value = "";
+
+    displayUsers();
+}
+
+function editUser(index) {
+    document.getElementById("name").value = users[index].name;
+    document.getElementById("email").value = users[index].email;
+    editIndex = index;
+}
+
+function deleteUser(index) {
+    users.splice(index, 1);
+    displayUsers();
+}
+
+displayUsers();
+
+</script>
 
 </body>
 </html>
